# tensorrt-cpp-api

./: .all-contributorsrc  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
Benchmark/: CMakeLists.txt  main.cpp
TensorRT_CPP_API/: CMakeLists.txt
TensorRT_CPP_API/config/: TensorRT_CPP_APIConfig.cmake.in
TensorRT_CPP_API/include/: engine.h
TensorRT_CPP_API/src/: engine.cpp
cmake/: FindTensorRT.cmake  ccache.cmake
include/: Int8Calibrator.h  logger.h  macros.h
include/engine/: EngineBuildLoadNetwork.inl  EngineRunInference.inl  EngineUtilities.inl
include/interfaces/: IEngine.h
include/util/: Stopwatch.h  Util.h  Util.inl
models/: .gitignore
scripts/: build_opencv.sh
src/: cmd_line_parser.h  engine.cpp  engine.h  int8example.cpp  logger.h  main.cpp
